--- a/css/estilo.css
+++ b/css/estilo.css
@@ -250,10 +250,14 @@ form input:focus, form select:focus{
 .item{
     padding: 15px;
     margin: 5px;
-    width: 22%;
+    width: 28%;
     border-radius: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     background-color: var(--cor-rosa);
+}
+
+.item p{
+    margin-bottom: 15px;
 }
 
 .item h3{
