--- a/css/estilo.css
+++ b/css/estilo.css
@@ -102,21 +102,32 @@ body{
 /*  section topicos */
 
 .conteudo{
-    display: flex; /* centraliza a div bloco */
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-;
     background-color: #1a7f50;
-    height: 25vh;
-    border-bottom: 2px solid #d0d0d0;
+    height: 500px;
+
 }
 
-.bloco {
-    background-color: #e18599; /* define o tamanho da div bloco */
+.card{
+    color: black;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px 0 10px 0;
+    box-shadow: 5px 10px 8px 10px #20202027;
+    width: 260px;
+    height: 360px;
+}
+.card > img{
+    width: 222px;
     border-radius: 10px;
-    width: 85%;
-    height: 90%;
 }
-
 .conteudo{
     color: white;
 }
